--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -70,17 +70,9 @@
 }
 
 .topBar {
-  max-height: 100px;
+  height: var(--top-bar-height);
   opacity: 1;
   overflow: hidden;
   pointer-events: auto;
-  transition:
-    opacity 0.5s,
-    max-height 0.5s;
-}
-
-.topBarHidden {
-  max-height: 0;
-  opacity: 0;
-  pointer-events: none;
+  transition: height 0.5s ease;
 }
